--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "meteor-method",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Meteor Methods (with TypeScript definitions)",
-  "repository": "nathantreid/meteor-method",
+  "repository": "https://github.com/nathantreid/meteor-method",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
@@ -15,8 +15,9 @@
     "meteor-globals": "^1.0.1"
   },
   "devDependencies": {
-    "@types/meteor": "^1.4.1",
     "@types/core-js": "^0.9.39",
+    "@types/meteor": "^1.4.1",
+    "@types/node": "^12.6.8",
     "core-js": "^2.4.1",
     "typescript": "^2.2.1"
   }
